--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,15 +5,15 @@ authors = [
 ]
 description = "Official Python wrapper for CAEN VMELib, CAEN Comm and CAEN PLU libraries."
 readme = "README.md"
-requires-python = ">=3.7"
+requires-python = ">=3.8"
 classifiers = [
 	"Development Status :: 4 - Beta",
 	"Intended Audience :: Science/Research",
 	"License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
 	"Natural Language :: English",
-	"Operating System :: OS Independent",
+	"Operating System :: Microsoft :: Windows",
+	"Operating System :: POSIX :: Linux",
 	"Programming Language :: Python :: 3",
-	"Programming Language :: Python :: 3.7",
 	"Programming Language :: Python :: 3.8",
 	"Programming Language :: Python :: 3.9",
 	"Programming Language :: Python :: 3.10",
