--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,21 +3,21 @@ stages:
   - deploy
 
 test-mypy:
-  image: python:3.8
+  image: ${CI_DEPENDENCY_PROXY_GROUP_IMAGE_PREFIX}/python:3.8
   stage: test
   when: manual
   script:
     - mypy src
 
 test-pylint:
-  image: python:3.8
+  image: ${CI_DEPENDENCY_PROXY_GROUP_IMAGE_PREFIX}/python:3.8
   stage: test
   when: manual
   script:
     - pylint src
 
 pypi-upload:
-  image: python:3.8
+  image: ${CI_DEPENDENCY_PROXY_GROUP_IMAGE_PREFIX}/python:3.8
   stage: deploy
   rules:
     - if: $CI_COMMIT_TAG
@@ -26,6 +26,6 @@ pypi-upload:
     # Build
     - python -m build
     # Upload to local package repository
-    - python -m twine upload --username gitlab-ci-token --password ${CI_JOB_TOKEN} --repository-url ${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/packages/pypi dist/*
+    - python -m twine upload --username gitlab-ci-token --password "${CI_JOB_TOKEN}" --repository-url ${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/packages/pypi dist/*
     # Upload to pypi.org
-    - python -m twine upload --username __token__ --password ${PYPI_TOKEN} dist/*
+    - python -m twine upload --username "__token__" --password "${PYPI_TOKEN}" dist/*
