--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,6 +16,15 @@ test-pylint:
   script:
     - pylint src
 
+test-unittest:
+  image: ${CI_DEPENDENCY_PROXY_GROUP_IMAGE_PREFIX}/python:3.9
+  stage: test
+  environment:
+    PYTHONPATH: src
+  script:
+    - pip install -r requirements.txt
+    - python -m unittest discover -s tests
+
 pypi-upload:
   image: ${CI_DEPENDENCY_PROXY_GROUP_IMAGE_PREFIX}/python:3.9
   stage: deploy
