--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "caen_libs"
 authors = [
 	{ name="Giovanni Cerretani" },
 ]
-description = "Official Python binding for CAEN VMELib, CAEN Comm, CAEN PLU, CAEN HV Wrapper and CAEN DPP Library."
+description = "Official Python binding for CAEN VMELib, CAEN Comm, CAEN Digitizer, CAEN PLU, CAEN HV Wrapper and CAEN DPP Library."
 readme = "README.md"
 requires-python = ">=3.9"
 classifiers = [
